--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <span>Cultural</span>
     </a>
     <a href="literature.html" class="box">
-      <img src="https://source.unsplash.com/1000x804">
+      <img src="./images/Book.png">
       <span>Literature</span>
     </a>
     <a href="gallery.html" class="box">
@@ -105,8 +105,8 @@
 <footer class="section footer-classic context-dark bg-image" style="background: #000000; text-align: center;">
     <p style="color: white;"><br>© 2023 Gokulashtami Website - Intellectual Property.</p>
     <!-- Rights-->
-    <p style="color: white;">Website Designed By: Aadhithya Sivakumar, Avi Nair, Joshua Anto, Rahul Shankar, Ramraj S.</p>
-      </footer>
+    <p style="color: white;">Website Designed By: Aadhithya Sivakumar</p>
+</footer>
 
 <script defer src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script defer src="js/index_script.js"></script>
