--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="topnav" id="myTopnav">
     	<a href="#home" class="active">Home</a>
-  	    <a href="#contact">Contact</a>
+  	    <a href="#heh">Contact</a>
   	    <div class="dropdown">
     		<button class="dropbtn">Dropdown
       		<i class="fa fa-caret-down"></i>
