--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 <body>
     <div class="topnav" id="myTopnav">
     	<a href="#home" class="active">Home</a>
-  	    <a href="#heh">Contact</a>
   	    <div class="dropdown">
     		<button class="dropbtn">Dropdown
       		<i class="fa fa-caret-down"></i>
     		</button>
     		<div class="dropdown-content">
       			<a href="quick.html">Quick View</a>
-      			<a href="#">Link 2</a>
-      			<a href="#">Link 3</a>
+      			<a href="#faculty">Faculty</a>
+      			<a href="#events">Events and Gallery</a>
     		</div>
         </div>
     	<a href="#about">About</a>
@@ -37,13 +36,14 @@
           <h3>2023</h3>
         </div>
       </div>
-      <div class="parallax__group info-container">
-        <img src="./img/concert.jpg" alt="Lively and colourful concert" />
-        <div class="text-container">
-          <h2>Janmashtami</h2>
-          <p>Krishna Janmashtami, also known simply as Krishnashtami, Janmashtami, or Gokulashtami, is an annual Hindu festival that celebrates the birth of Krishna, the eighth avatar of Vishnu. In certain Hindu texts, such as the Gita Govinda, Krishna has been identified as supreme God and the source of all avatars.</p>
-        </div>
-      </div>
+
+<div class="parallax__group info-container">
+  <img src="./images/midsection1(2).jpeg" alt="Lively and colourful concert" />
+  <div class="text-container">
+    <h2>Janmashtami Celebrations</h2>
+    <p>Janmashtami, Hindu festival celebrating the birth (janma) of the god Krishna on the eighth (ashtami) day of the dark fortnight of the month of Bhadrapada (August–September). The number eight has another significance in the Krishna legend in that he is the eighth child of his mother, Devaki. The occasion is observed especially in Mathura and Vrindavan (Brindaban), the scenes of Krishna’s childhood and early youth. On the preceding day, devotees keep a vigil and fast until midnight, the traditional hour of his birth. Then the image of Krishna is bathed in water and milk, dressed in new clothes, and worshipped. Temples and household shrines are decorated with leaves and flowers; sweetmeats are first offered to the god and then distributed as prasada (the god’s leftovers, which carry his favour) to all the members of the household.</p>
+  </div>
+</div>
     
 
 <!-- Gap between section and slides-->
@@ -52,7 +52,7 @@
 <!--Co-ordinators-->
 
     <!--Outside-->
-    <div class="co-ordinator-container">
+    <div class="co-ordinator-container" id="faculty">
         <div class="co-ordinator-gallery">
             <a href="faculty_coordinators.html" class="co-ordinator-img-box">	
                 <h3 style="display:inline-block" >Faculty Co-ordinators</h3>
@@ -69,12 +69,11 @@
 
 <!-- Gap between footer and co-ordinators-->
 
-    <div class="middleGap">
-    </div>
+
 
 <!-- Grid of four sections -->
 	
-<div class="container">
+<div class="container" id="events">
     <a href="sports.html" class="box">
       <img src="https://source.unsplash.com/1000x800">
       <span>Sports</span>
@@ -95,8 +94,14 @@
 
 <!-- Gap between section and co-ordinators-->
 
-<div class="middleGap">
+<div class="parallax__group info-container">
+  <img src="./img/concert.jpg" alt="Lively and colourful concert" />
+  <div class="text-container">
+    <h2>Janmashtami Celebrations</h2>
+    <p>Janmashtami, Hindu festival celebrating the birth (janma) of the god Krishna on the eighth (ashtami) day of the dark fortnight of the month of Bhadrapada (August–September). The number eight has another significance in the Krishna legend in that he is the eighth child of his mother, Devaki. The occasion is observed especially in Mathura and Vrindavan (Brindaban), the scenes of Krishna’s childhood and early youth. On the preceding day, devotees keep a vigil and fast until midnight, the traditional hour of his birth. Then the image of Krishna is bathed in water and milk, dressed in new clothes, and worshipped. Temples and household shrines are decorated with leaves and flowers; sweetmeats are first offered to the god and then distributed as prasada (the god’s leftovers, which carry his favour) to all the members of the household.</p>
+  </div>
 </div>
+
 </div>
 
 <!--Footer-->
@@ -104,7 +109,7 @@
 <footer class="section footer-classic context-dark bg-image" style="background: #000000; text-align: center;">
     <p style="color: white;"><br>© 2023 Gokulashtami Website - Intellectual Property.</p>
     <!-- Rights-->
-    <p style="color: white;">Website Designed By: Aadhithya Sivakumar</p>
+    <p style="color: white;">Website Designed By: Aadhithya Sivakumar(10), Akshit Singh(11)</p>
 </footer>
 
 <script defer src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
