--- a/quick.html
+++ b/quick.html
@@ -68,7 +68,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <a href="#home"><li>Home</li></a>
             <li><a href="#section1">Sports</a></li>
             <li><a href="#section2">Cultural</a></li>
             <li><a href="#section3">Literature</a></li>
